Added some minor comments

--- a/temppi.conf
+++ b/temppi.conf
@@ -1,3 +1,9 @@
+# This is the apache config for temp-pi
+# copy this file to /etc/apache2/sites/available/ (sudo)
+# It is assumed, that the repository was cloned to /home/pi/src/tempPi/
+# Attention: Please disable the default config 000-default.conf as this
+# configuration serves on port 80, /
+
 <VirtualHost *>
     ServerName temp-pi
 
