--- a/temppi.conf
+++ b/temppi.conf
@@ -7,13 +7,18 @@
 <VirtualHost *>
     ServerName temp-pi
 
-    WSGIDaemonProcess yourapplication user=www-user group=www-user threads=5
+    WSGIDaemonProcess tempserver user=www-data group=www-data threads=5
     WSGIScriptAlias / /home/pi/src/tempPi/tempserver.wsgi
 
     <Directory /home/pi/src/tempPi>
         WSGIProcessGroup tempserver
         WSGIApplicationGroup %{GLOBAL}
-        Order deny,allow
-        Allow from all
+
+	## Before Apache 2.4
+#        Order deny,allow
+#        Allow from all
+
+	## After Apache 2.4
+	Require all granted
     </Directory>
 </VirtualHost>
